--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,2 @@
-BOT_TOKEN=your_bot_token_here
-ADMIN_CHAT_ID=your_admin_chat_id_here
+BOT_TOKEN=7525839831:AAFQIY1dUran8yIfx3SS1C4dKNt4sshOmu0
 PORT=3000
